tests/positive/rule4_conditional.safe
-- Test: rule4_conditional
-- Description: Conditional dereference with null guard.
--   Multiple access values are conditionally dereferenced after
--   explicit null checks on each path.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.4.p136:fa5e94b7
-- Expected: ACCEPT

package safe_conditional

   type config_value is range 0 to 1000;
   type config_ptr is access config_value;

   --  Max_Of_Two: returns the maximum of two optional values.
   --  Each pointer is null-checked before dereference.
   function max_of_two (A, B : config_ptr) returns config_value

      if A != null and then B != null
         --  Both A and B are provably not null.
         if A >= B
            return A;
         else
            return B;

      else if A != null
         --  A is provably not null.
         return A;
      else if B != null
         --  B is provably not null.
         return B;
      else
         return 0;





